<resources>
    <string name="app_name">Movie List App</string>
    <string name="sort_button">Sort</string>
    <string name="movies_title">Movies</string>
    <string name="on_my_watchlist">ON MY WATCHLIST</string>
    <string name="rv_list_description">%1$s - %2$s</string>
    <string name="watch_trailer">WATCH TRAILER</string>
    <string name="add_to_watchlist">+ ADD TO WATCHLIST</string>
    <string name="remove_from_watchlist">REMOVE FROM WATCHLIST</string>
    <string name="short_description">Short description</string>
    <string name="general_details">Details</string>
    <string name="general_genre">Genre</string>
    <string name="general_released_date">Released Date</string>
    <string name="max_value_rating">/10</string>
    <string name="movie_title_list">%1$s (%2$s)</string>
    <string name="movie_detail_released_date">%1$s, %2$s %3$s</string>
    <string name="general_title">Title</string>
    <string name="general_cancel">Cancel</string>
</resources>