<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:padding="16dp">

    <TextView
        android:id="@+id/btn_top_sort_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingVertical="8dp"
        android:textColor="@color/grey_300"
        android:background="@drawable/bg_top_sort_dialog_button"
        android:text="@string/general_title"/>

    <TextView
        android:id="@+id/btn_bottom_sort_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingVertical="8dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/grey_300"
        android:background="@drawable/bg_bottom_sort_dialog_button"
        android:text="@string/general_released_date"/>

    <TextView
        android:id="@+id/btn_cancel_sort_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingVertical="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:background="@drawable/bg_cancel_sort_dialog_button"
        android:text="@string/general_cancel"/>

</LinearLayout>