<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="16dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_movie_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_movie_detail"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/spider_man"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_movie_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/cv_movie_detail"
        app:layout_constraintStart_toEndOf="@id/cv_movie_detail"
        app:layout_constraintEnd_toStartOf="@id/tv_movie_detail_rating"
        tools:text="Spider-Man: Into the Spider-Verse"/>

    <TextView
        android:id="@+id/tv_movie_detail_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@id/tv_movie_detail_title"
        app:layout_constraintEnd_toStartOf="@id/tv_movie_detail_rating_max"
        tools:text="7.8"/>

    <TextView
        android:id="@+id/tv_movie_detail_rating_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/tv_movie_detail_rating"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/max_value_rating"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_title"
        app:layout_constraintBottom_toBottomOf="@id/cv_movie_detail"
        app:layout_constraintStart_toEndOf="@id/cv_movie_detail">

        <TextView
            android:id="@+id/btn_add_to_watchlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_300"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_watchlist"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            tools:text="@string/add_to_watchlist"/>

        <TextView
            android:id="@+id/btn_watch_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/watch_trailer"
            android:background="@drawable/bg_button_watch_trailer"
            android:paddingVertical="8dp"
            android:paddingHorizontal="24dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>